[gd_scene load_steps=2 format=3 uid="uid://bphh0fc1peyxl"]

[ext_resource type="Script" path="res://scenes/GameScene/Plants/PlantDirector.gd" id="1_sbgqo"]

[node name="PlantDirector" type="Node2D"]
script = ExtResource("1_sbgqo")

[node name="Rays" type="Node2D" parent="."]

[node name="LeftRay" type="RayCast2D" parent="Rays"]
target_position = Vector2(-2000, 0)
collision_mask = 128
collide_with_areas = true

[node name="RightRay" type="RayCast2D" parent="Rays"]
target_position = Vector2(2000, 0)
collision_mask = 128
